# lanchain-practise

./: README.md  practise_with_vector_store.ipynb  pratice-with-vector-db
.devcontainer/: devcontainer.json
DocChainMaster/: 1_Text_Summrizer.ipynb  2_LangSwap.ipynb  3_StuffDocumentsChain.ipynb  README.md
InfoLens/: app.py  config.py  embedding.py  loader.py  model.py  prompt.py  requirements.txt  retrieval.py
InsightBot/: .gitignore  README.md  agent.py  app.py  logger.py  requirements.txt  tools.py
LCEL/: .gitignore  pyproject.toml
LCEL/app/: server.py
Lang-Talk/: README.md  app.py  compose.yaml  env_example  llm.py  prompt.py  requirements.txt
QuickSum/: .gitignore  Dockerfile  README.md  app.py  compose.yaml  logger.py  requirements.txt  summarizer.py  utils.py
langchain-basic-component/: lng_basic_comnt.ipynb
practise-with-vector-db/: README.md  embedding_practise.ipynb  practise_with_vector_store.ipynb  text_splitter.ipynb
web-quest/: README.md  web_quest.ipynb
